fwb: Implement alternative device key handler
jhenrique09 edits:
* Adapt to PE
* Minify code

This is omni's rom keyhandler implementation

You can't use it if config_deviceKeyHandlerLibs/config_deviceKeyHandlerClasses (LOS implementation) is defined

Change-Id: I5b37c4cf251da1de32498ab707914b5c2c752b7a
Signed-off-by: dlasdl <dineshdlas@live.com>

--- a/core/res/res/values/superior_symbols.xml
+++ b/core/res/res/values/superior_symbols.xml
@@ -87,4 +87,8 @@
    <!-- Enable face auth when swiping security view -->
    <java-symbol type="bool" name="config_faceAuthOnSecurityView" />
 
+   <!-- Alternative keyhandler -->
+    <java-symbol type="string" name="config_alternativeDeviceKeyHandlerLib" />
+    <java-symbol type="string" name="config_alternativeDeviceKeyHandlerClass" />
+
 </resources>
