--- a/core/res/res/values/superior_symbols.xml
+++ b/core/res/res/values/superior_symbols.xml
@@ -32,9 +32,9 @@
     <java-symbol type="dimen" name="config_buttonBrightnessSettingDefaultFloat" />
     <java-symbol type="bool" name="config_deviceHasVariableButtonBrightness" />
 
-     <!-- Key handler class -->
-    <java-symbol type="string" name="config_deviceKeyHandlerLib" />
-    <java-symbol type="string" name="config_deviceKeyHandlerClass" />
+     <!-- Device keyhandlers -->
+    <java-symbol type="array" name="config_deviceKeyHandlerLibs" />
+    <java-symbol type="array" name="config_deviceKeyHandlerClasses" />
 
     <!-- HW keys binding -->
     <java-symbol type="anim" name="custom_app_in" />
