--- a/core/res/res/values/superior_config.xml
+++ b/core/res/res/values/superior_config.xml
@@ -26,7 +26,20 @@
     <dimen name="config_buttonBrightnessSettingDefaultFloat">1.0</dimen>
     <bool name="config_deviceHasVariableButtonBrightness">false</bool>
 
-     <!-- Hardware keys present on the device, stored as a bit field.
+    <!-- Path to the library that contains a device specific key handler -->
+    <string name="config_deviceKeyHandlerLib" translatable="false"></string>
+    <!-- Name of that key handler class -->
+    <string name="config_deviceKeyHandlerClass" translatable="false"></string>
+
+    <!-- Paths to the libraries that contain device specific key handlers -->
+    <string-array name="config_AlternativeDeviceKeyHandlerLibs" translatable="false">
+    </string-array>
+
+    <!-- Names of the key handler classes -->
+    <string-array name="config_AlternativeDeviceKeyHandlerClasses" translatable="false">
+    </string-array>
+
+    <!-- Hardware keys present on the device, stored as a bit field.
          This integer should equal the sum of the corresponding value for each
          of the following keys present:
              1 - Home
